# Deckseer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start-deckseer-exporter.cmd
docs/: ACCURACY_REVIEW.md  ACCURACY_SCENARIO_INTAKE.md  ADVICE_MODULES_DECISION_BRIEF.md  CONTEXT.md  DOMAIN_CONTEXT.md  EMPIRICAL_REVIEW.md  EXECUTION_LOOP.md  EXPORTER_CARD_REWARD_API_RECON.md  EXPORTER_CARD_REWARD_COLORLESS_POTION_MAPPING_REVIEW.md  EXPORTER_CARD_REWARD_COMPILE_PROBE.md  EXPORTER_CARD_REWARD_DECK_ID_REVEAL_DESIGN.md  EXPORTER_CARD_REWARD_DECK_MAPPING_GAP_REVIEW.md  EXPORTER_CARD_REWARD_DRAMATIC_ENTRANCE_DATA_REVIEW.md  EXPORTER_CARD_REWARD_ID_DIAGNOSTIC_DESIGN.md  EXPORTER_CARD_REWARD_ID_REVEAL_CONTRACT.md  EXPORTER_CARD_REWARD_LIVE_EXPORT_DESIGN.md  EXPORTER_CARD_REWARD_LIVE_MAPPING_GAP_REVIEW.md  EXPORTER_CARD_REWARD_MAPPING_REVIEW.md  EXPORTER_CARD_REWARD_MAPPING_REVIEW_DESIGN.md  EXPORTER_CARD_REWARD_RELIC_DATA_REVIEW.md  EXPORTER_CARD_REWARD_RELIC_POTION_ID_REVIEW_DESIGN.md  EXPORTER_CARD_REWARD_RELIC_POTION_MAPPING_REVIEW.md  EXPORTER_CARD_REWARD_RUN_STATE_SYMBOL_REVIEW.md  EXPORTER_CARD_REWARD_VISIBILITY_DESIGN.md  EXPORTER_EVENT_SPECIAL_ROUTE_CLASSIFIER_DESIGN.md  EXPORTER_MOD_DESIGN.md  EXPORTER_MOD_SURFACE_REVIEW.md  EXPORTER_RELIC_REWARD_LIVE_EXPORT_DESIGN.md  EXPORTER_STATIC_MOD_SPIKE.md  EXPORTER_STATIC_SPIKE_PREFLIGHT.md  EXPORTER_TOOLCHAIN_SETUP.md  EXPORTER_TREASURE_RELIC_DATA_REVIEW.md  EXPORTER_TREASURE_RELIC_LIVE_EXPORT_READINESS.md  EXPORTER_TREASURE_RELIC_MAPPING_DATA_REVIEW.md  EXPORTER_TREASURE_RELIC_MAPPING_GAP_REVIEW.md  FIRST_EMPIRICAL_CAPTURE.md  (+6 more)
(+235 files in other folders)
